# discord_watcher

./: Cargo.toml  README.md  install_dw  rust-toolchain.toml
src/: discord.rs  enums.rs  main.rs  utils.rs
src/egui/: app.rs  egui_app.rs  egui_main.rs  top_bar.rs
src/gtk/: gtk_app.rs  gtk_main.rs
