[package]
name = "discord_watcher"
version = "0.5.1"
edition = "2021"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
dotenv = { version = "0.14.1" }
# relm4 = "0.9.0"
# relm4-components = "0.9.1"
notify-rust = "4.11.3"
egui = "0.28.1"
eframe = { version = "0.28.1", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui-phosphor = "0.6.0"
rodio = "0.19.0"
lazy_static = "1.5.0"
egui_struct = { version = "0.4.2", default-features = false, features = [
    "egui28",
] }
